fix participant card
- fix participant card on teacher webinar detail
- give value on edit webinar
- truncate title on home

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -290,5 +290,9 @@ input {
 
 .scrollable{
   overflow-y: auto;
-  max-height: 300px;
+  max-height: 276px;
+}
+
+.scrollable > .d-flex{
+  height:48px;
 }
